--- a/latest_posts_with_thumbnails_and_ads/assets/style.css
+++ b/latest_posts_with_thumbnails_and_ads/assets/style.css
@@ -1,1 +1,99 @@
-h2.shomtek_title{font-family:inherit;font-size:14px;font-weight:bold;text-transform:uppercase;color:#ecf0f1;text-align:center;line-height:1.3em;border-bottom:1px solid rgba(44,62,80,0.3);box-shadow:0 1px 0 rgba(255,255,255,0.2)}h2.shomtek_title>a{color:#ecf0f1;text-decoration:none}h2.shomtek_title>a:link{color:#ecf0f1}.shomtek_post{background:#ecf0f1;padding:10px;margin-bottom:15px}.shomtek_post .shomtek_title_block{padding:0 5px}.shomtek_post .shomtek_img_container{height:auto;position:relative;overflow:hidden}.shomtek_post .shomtek_img_container img.shomtek_post_image{width:100%}.shomtek_post .shomtek_post_data{position:absolute;bottom:0;left:0;right:0;padding:5px;background-color:rgba(44,62,80,0.7);color:#ecf0f1}.shomtek_post .shomtek_post_data .shomtek_post_date{float:left}.shomtek_post .shomtek_post_data .shomtek_comments_count{float:right}.show_ads{text-align:center}
+/*--------------------------------------------------------------
+Copyright (C) shomtek.com
+Website: http://www.shomtek.com
+Support: info@shomtek.com
+Author: Eduart Milushi
+---------------------------------------------------------------*/
+h2.shomtek_title {
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #ECF0F1;
+  text-align: center;
+  line-height: 1.3em;
+  border-bottom: 1px solid rgba(44, 62, 80, 0.3);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+}
+h2.shomtek_title > a {
+  color: #ECF0F1 !important;
+  text-decoration: none;
+}
+h2.shomtek_title > a:link {
+  color: #ECF0F1 !important;
+}
+.shomtek_post {
+  background: #ECF0F1;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+.shomtek_post .shomtek_title_block {
+  padding: 0 5px;
+}
+.shomtek_post .shomtek_img_container {
+  height: auto;
+  position: relative;
+  overflow: hidden;
+}
+.shomtek_post .shomtek_img_container img.shomtek_post_image {
+  width: 100%;
+}
+.shomtek_post .shomtek_post_data {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5px;
+  background-color: rgba(44, 62, 80, 0.7);
+  color: #ECF0F1;
+}
+.shomtek_post .shomtek_post_data .shomtek_post_date {
+  float: left;
+}
+.shomtek_post .shomtek_post_data .shomtek_comments_count {
+  float: right;
+}
+.show_ads {
+  text-align: center;
+  background: #ECF0F1;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+.shomtek_post_horizontal {
+  z-index: 1;
+}
+.shomtek_post_horizontal .owl-nav .owl-prev,
+.shomtek_post_horizontal .owl-nav .owl-next {
+  position: absolute;
+  top: 50%;
+  margin-top: -23px;
+  padding: 8px;
+  background: #2C3E50;
+  color: #ECF0F1;
+  width: 30px;
+  height: 30px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 13px;
+  line-height: 1;
+  text-align: center;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  z-index: 2;
+}
+.shomtek_post_horizontal .owl-nav .owl-prev:hover,
+.shomtek_post_horizontal .owl-nav .owl-next:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.shomtek_post_horizontal .owl-nav .owl-prev {
+  left: 0;
+}
+.shomtek_post_horizontal .owl-nav .owl-next {
+  right: 0;
+}
