--- a/latest_posts_with_thumbnails_and_ads/assets/style.less
+++ b/latest_posts_with_thumbnails_and_ads/assets/style.less
@@ -1,3 +1,12 @@
+// out: style.css, sourcemap: true, compress: false
+
+/*--------------------------------------------------------------
+Copyright (C) shomtek.com
+Website: http://www.shomtek.com
+Support: info@shomtek.com
+Author: Eduart Milushi
+---------------------------------------------------------------*/
+
 //variables
 @widgetBG: #ECF0F1;
 @dataColor: #ECF0F1;
@@ -16,10 +25,10 @@ h2.shomtek_title {
   border-bottom: 1px solid fade(@dataBG, 30%);
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
   > a {
-    color: @dataColor;
+    color: @dataColor!important;
     text-decoration: none;
     &:link {
-      color: @dataColor;
+      color: @dataColor!important;
     }
   }
 }
@@ -58,4 +67,49 @@ h2.shomtek_title {
 
 .show_ads {
   text-align: center;
-} 
+  background: @widgetBG;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+//horizontal style
+.shomtek_post_horizontal {
+	z-index: 1;
+	.owl-nav {
+		.owl-prev,
+		.owl-next {
+		  position: absolute;
+		  top: 50%;
+		  margin-top: -23px;
+		  padding: 8px;
+		  background: @dataBG;
+		  color: @dataColor;
+		  width: 30px;
+		  height: 30px;
+		  -webkit-border-radius: 5px;
+		  -moz-border-radius: 5px;
+		  border-radius: 5px;
+		  font-size: 13px;
+		  line-height: 1;
+		  text-align: center;
+		  opacity: 0.5;
+		  filter: alpha(opacity=50);
+		  -webkit-transition: all 0.2s;
+		  -moz-transition: all 0.2s;
+		  -o-transition: all 0.2s;
+		  transition: all 0.2s;
+		  z-index: 2;
+		}
+		.owl-prev:hover,
+		.owl-next:hover {
+		  opacity: 1;
+		  filter: alpha(opacity=100);
+		}
+		.owl-prev {
+		  left: 0;
+		}
+		.owl-next {
+		  right: 0;
+		}
+	}
+}
